--- a/packages/solarwinds-apm/tsconfig.json
+++ b/packages/solarwinds-apm/tsconfig.json
@@ -1,8 +1,4 @@
 {
   "extends": "../../tsconfig.base.json",
-  "include": ["src/**/*"],
-  "compilerOptions": {
-    "rootDir": "./src",
-    "outDir": "./dist"
-  }
+  "include": ["package.json"]
 }
