--- a/examples/next-prisma/package.json
+++ b/examples/next-prisma/package.json
@@ -8,19 +8,19 @@
   },
   "dependencies": {
     "@opentelemetry/api": "^1.3.0",
-    "@prisma/client": "5.3.1",
-    "@prisma/instrumentation": "^5.3.1",
-    "next": "^13.5.1",
+    "@prisma/client": "^5.4.0",
+    "@prisma/instrumentation": "^5.4.0",
+    "next": "^13.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "solarwinds-apm": "workspace:^"
   },
   "devDependencies": {
     "@types/node": "^16.13.0",
-    "@types/react": "^18.2.22",
-    "eslint": "^8.49.0",
-    "eslint-config-next": "13.5.1",
-    "prisma": "5.3.1",
+    "@types/react": "^18.2.24",
+    "eslint": "^8.50.0",
+    "eslint-config-next": "^13.5.4",
+    "prisma": "^5.4.0",
     "typescript": "^5.2.2"
   }
 }
