--- a/packages/solarwinds-apm/package.json
+++ b/packages/solarwinds-apm/package.json
@@ -53,6 +53,7 @@
     "@opentelemetry/semantic-conventions": "~1.17.0",
     "@solarwinds-apm/bindings": "workspace:^",
     "@solarwinds-apm/instrumentations": "workspace:^",
+    "@solarwinds-apm/require": "workspace:^",
     "@solarwinds-apm/sdk": "workspace:^",
     "zod": "^3.22.3"
   },
