--- a/packages/compat/package.json
+++ b/packages/compat/package.json
@@ -22,7 +22,7 @@
     "provenance": true
   },
   "scripts": {
-    "build": "tsc -p src",
+    "build": "tsc",
     "lint": "prettier --check . && eslint . --max-warnings=0",
     "lint:fix": "eslint --fix . && prettier --write .",
     "publish": "node ../../scripts/publish.js",
