--- a/packages/module/package.json
+++ b/packages/module/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@solarwinds-apm/require",
+  "name": "@solarwinds-apm/module",
   "version": "0.0.0",
   "license": "Apache-2.0",
   "contributors": [
