add a script to document the compatible module versions

--- a/packages/instrumentations/package.json
+++ b/packages/instrumentations/package.json
@@ -22,7 +22,7 @@
     "provenance": true
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && node ./dist/compatibility.js",
     "lint": "prettier --check . && eslint . --max-warnings=0",
     "lint:fix": "eslint --fix . && prettier --write .",
     "publish": "node ../../scripts/publish.js"
@@ -81,8 +81,10 @@
   },
   "devDependencies": {
     "@solarwinds-apm/eslint-config": "workspace:^",
+    "@types/semver": "^7.5.3",
     "eslint": "^8.50.0",
     "prettier": "^3.0.3",
+    "semver": "^7.5.4",
     "typescript": "^5.2.2"
   },
   "engines": {
