--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -3,11 +3,15 @@
     "incremental": true,
     "composite": true,
     "target": "es2021",
-    "module": "commonjs",
+    "module": "node16",
+    "moduleResolution": "node16",
     "declaration": true,
+    "sourceMap": true,
     "esModuleInterop": true,
+    "allowJs": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
+    "skipLibCheck": true,
     "strict": true,
     // not included in strict mode but useful
     "noUncheckedIndexedAccess": true,
