--- a/packages/compat/package.json
+++ b/packages/compat/package.json
@@ -13,16 +13,23 @@
   "bugs": {
     "url": "https://github.com/solarwindscloud/solarwinds-apm-js/issues"
   },
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "type": "module",
+  "exports": {
+    ".": {
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js"
+    }
+  },
+  "main": "./dist/cjs/index.js",
   "files": [
-    "dist/"
+    "./src/",
+    "./dist/"
   ],
   "publishConfig": {
     "provenance": true
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && tsc -p ./tsconfig.cjs.json && node ../../scripts/cjs.js ./dist/cjs",
     "lint": "prettier --check . && eslint . --max-warnings=0",
     "lint:fix": "eslint --fix . && prettier --write .",
     "publish": "node ../../scripts/publish.js",
