--- a/packages/lazy/tsconfig.cjs.json
+++ b/packages/lazy/tsconfig.cjs.json
@@ -1,9 +1,9 @@
 {
-  "extends": "../../tsconfig.base.json",
+  "extends": "../../tsconfig.base.cjs.json",
   "include": ["./src"],
   "compilerOptions": {
     "rootDir": "./src",
-    "outDir": "./dist/esm"
+    "outDir": "./dist/cjs"
   },
   "references": [{ "path": ".." }]
 }
