--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "../../tsconfig.base.json",
-  "include": ["./src"],
+  "include": ["./src", "./lib.d.ts"],
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist"
