--- a/packages/solarwinds-apm/package.json
+++ b/packages/solarwinds-apm/package.json
@@ -29,16 +29,27 @@
     "telemetry",
     "solarwinds"
   ],
-  "main": "dist/index.js",
+  "type": "module",
+  "exports": {
+    ".": {
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js"
+    },
+    "./loader": {
+      "import": "./dist/esm/loader.js"
+    }
+  },
+  "main": "./dist/cjs/index.js",
   "files": [
-    "dist/",
-    "CONFIGURATION.md"
+    "./src/",
+    "./dist/",
+    "./CONFIGURATION.md"
   ],
   "publishConfig": {
     "provenance": true
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && tsc -p ./tsconfig.cjs.json && node ../../scripts/cjs.js ./dist/cjs",
     "lint": "prettier --check . && eslint . --max-warnings=0",
     "lint:fix": "eslint --fix . && prettier --write .",
     "publish": "node ../../scripts/publish.js",
