--- a/examples/express-mysql/package.json
+++ b/examples/express-mysql/package.json
@@ -2,7 +2,7 @@
   "name": "@solarwinds-apm/example-express-mysql",
   "private": true,
   "scripts": {
-    "start": "node -r solarwinds-apm index.js"
+    "start": "node -r solarwinds-apm --loader solarwinds-apm/loader index.js"
   },
   "dependencies": {
     "@opentelemetry/api": "^1.3.0",
