--- a/examples/hello-distributed/package.json
+++ b/examples/hello-distributed/package.json
@@ -2,7 +2,7 @@
   "name": "@solarwinds-apm/example-hello-distributed",
   "private": true,
   "scripts": {
-    "start": "concurrently \"node -r solarwinds-apm external.js\" \"node -r solarwinds-apm internal.js\""
+    "start": "concurrently \"node -r --loader solarwinds-apm/loader solarwinds-apm external.js\" \"node -r --loader solarwinds-apm/loader solarwinds-apm internal.js\""
   },
   "dependencies": {
     "@opentelemetry/api": "^1.3.0",
