--- a/packages/dependencies/package.json
+++ b/packages/dependencies/package.json
@@ -16,7 +16,7 @@
   "type": "module",
   "exports": {
     ".": {
-      "import": "./dist/esm/index.js",
+      "import": "./dist/es/index.js",
       "require": "./dist/cjs/index.js"
     }
   },
@@ -29,7 +29,7 @@
     "provenance": true
   },
   "scripts": {
-    "build": "tsc && tsc -p ./tsconfig.cjs.json && node ../../scripts/cjs.js ./dist/cjs",
+    "build": "rollup -c",
     "lint": "prettier --check . && eslint . --max-warnings=0",
     "lint:fix": "eslint --fix . && prettier --write .",
     "publish": "node ../../scripts/publish.js",
@@ -40,10 +40,12 @@
   },
   "devDependencies": {
     "@solarwinds-apm/eslint-config": "workspace:^",
+    "@solarwinds-apm/rollup-config": "workspace:^",
     "@solarwinds-apm/test": "workspace:^",
     "@types/node": "^16.13.0",
     "eslint": "^8.50.0",
     "prettier": "^3.0.3",
+    "rollup": "^4.0.2",
     "typescript": "^5.2.2"
   },
   "engines": {
