--- a/packages/instrumentations/package.json
+++ b/packages/instrumentations/package.json
@@ -16,7 +16,7 @@
   "type": "module",
   "exports": {
     ".": {
-      "import": "./dist/esm/index.js",
+      "import": "./dist/es/index.js",
       "require": "./dist/cjs/index.js"
     }
   },
@@ -29,7 +29,7 @@
     "provenance": true
   },
   "scripts": {
-    "build": "tsc && tsc -p ./tsconfig.cjs.json && node ../../scripts/cjs.js ./dist/cjs && node ./dist/esm/compatibility.js",
+    "build": "rollup -c && node ./dist/es/compatibility.js",
     "lint": "prettier --check . && eslint . --max-warnings=0",
     "lint:fix": "eslint --fix . && prettier --write .",
     "publish": "node ../../scripts/publish.js"
@@ -88,9 +88,11 @@
   },
   "devDependencies": {
     "@solarwinds-apm/eslint-config": "workspace:^",
+    "@solarwinds-apm/rollup-config": "workspace:^",
     "@types/semver": "^7.5.3",
     "eslint": "^8.50.0",
     "prettier": "^3.0.3",
+    "rollup": "^4.0.2",
     "semver": "^7.5.4",
     "typescript": "^5.2.2"
   },
