--- a/packages/rollup-config/package.json
+++ b/packages/rollup-config/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@solarwinds-apm/lazy",
-  "version": "1.0.0-pre.5",
+  "name": "@solarwinds-apm/rollup-config",
+  "version": "0.0.0",
   "license": "Apache-2.0",
   "contributors": [
     "Raphaël Thériault <raphael.theriault@solarwinds.com>"
@@ -8,42 +8,49 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/solarwindscloud/solarwinds-apm-js.git",
-    "directory": "packages/lazy"
+    "directory": "packages/rollup-config"
   },
   "bugs": {
     "url": "https://github.com/solarwindscloud/solarwinds-apm-js/issues"
   },
   "type": "module",
   "exports": {
-    ".": {
-      "import": "./dist/es/index.js",
-      "require": "./dist/cjs/index.js"
-    }
+    ".": "./index.js"
   },
-  "main": "./dist/cjs/index.js",
+  "main": "./index.js",
   "files": [
-    "./src/",
-    "./dist/"
+    "./index.js"
   ],
   "publishConfig": {
     "provenance": true
   },
   "scripts": {
-    "build": "rollup -c",
     "lint": "prettier --check . && eslint . --max-warnings=0",
     "lint:fix": "eslint --fix . && prettier --write .",
     "publish": "node ../../scripts/publish.js"
   },
+  "dependencies": {
+    "@rollup/plugin-json": "^6.0.1",
+    "@rollup/plugin-typescript": "^11.1.5",
+    "globby": "^11.1.0",
+    "rollup-plugin-node-externals": "^6.1.2",
+    "tslib": "^2.6.2"
+  },
+  "peerDependencies": {
+    "rollup": "*",
+    "typescript": "*"
+  },
+  "peerDependenciesMeta": {
+    "rollup": {
+      "optional": false
+    },
+    "typescript": {
+      "optional": false
+    }
+  },
   "devDependencies": {
     "@solarwinds-apm/eslint-config": "workspace:^",
-    "@solarwinds-apm/rollup-config": "workspace:^",
     "eslint": "^8.50.0",
-    "prettier": "^3.0.3",
-    "rollup": "^4.0.2",
-    "typescript": "^5.2.2"
-  },
-  "engines": {
-    "node": ">=16"
-  },
-  "stableVersion": "0.0.0"
+    "prettier": "^3.0.3"
+  }
 }
