--- a/packages/solarwinds-apm/package.json
+++ b/packages/solarwinds-apm/package.json
@@ -32,11 +32,11 @@
   "type": "module",
   "exports": {
     ".": {
-      "import": "./dist/esm/index.js",
+      "import": "./dist/es/index.js",
       "require": "./dist/cjs/index.js"
     },
     "./loader": {
-      "import": "./dist/esm/loader.js"
+      "import": "./dist/es/loader.js"
     }
   },
   "main": "./dist/cjs/index.js",
@@ -49,7 +49,7 @@
     "provenance": true
   },
   "scripts": {
-    "build": "tsc && tsc -p ./tsconfig.cjs.json && node ../../scripts/cjs.js ./dist/cjs",
+    "build": "rollup -c",
     "lint": "prettier --check . && eslint . --max-warnings=0",
     "lint:fix": "eslint --fix . && prettier --write .",
     "publish": "node ../../scripts/publish.js",
@@ -89,10 +89,12 @@
     "@opentelemetry/exporter-metrics-otlp-grpc": "~0.43.0",
     "@opentelemetry/exporter-trace-otlp-grpc": "~0.43.0",
     "@solarwinds-apm/eslint-config": "workspace:^",
+    "@solarwinds-apm/rollup-config": "workspace:^",
     "@solarwinds-apm/test": "workspace:^",
     "@types/node": "^16.13.0",
     "eslint": "^8.50.0",
     "prettier": "^3.0.3",
+    "rollup": "^4.0.2",
     "typescript": "^5.2.2"
   },
   "engines": {
