--- a/turbo.json
+++ b/turbo.json
@@ -7,11 +7,17 @@
         "build.js",
         "package.json",
         "tsconfig.json",
-        "tsconfig.build.json",
+        "rollup.config.json",
         "src/**",
         "oboe/**"
       ],
-      "outputs": ["dist/**", "npm/*/oboe.node", "npm/*/liboboe.so"]
+      "outputs": [
+        "dist/**",
+        "npm/*/*.node",
+        "npm/*/liboboe.so",
+        "tsconfig.tsbuildinfo",
+        "node_modules/.cache/**"
+      ]
     },
     "lint": {
       "dependsOn": ["^build"],
@@ -32,7 +38,7 @@
     "test": {
       "dependsOn": ["@solarwinds-apm/test#build", "build"],
       "inputs": ["package.json", "tsconfig.json", "src/**", "test/**"],
-      "env": ["TEST_SERVICE_KEY", "TEST_COLLECTOR"],
+      "env": ["TEST_*"],
       "outputs": []
     }
   },
@@ -41,9 +47,9 @@
     ".prettierrc.json",
     ".yarnrc.yml",
     "tsconfig.base.json",
-    "tsconfig.base.cjs.json",
     "tsconfig.base.test.json",
     "yarn.lock",
-    "packages/eslint-config/index.js"
+    "packages/eslint-config/index.js",
+    "packages/rollup-config/index.js"
   ]
 }
