hopefully fix some stuff ?

--- a/turbo.json
+++ b/turbo.json
@@ -15,8 +15,7 @@
         "dist/**",
         "npm/*/*.node",
         "npm/*/liboboe.so",
-        "tsconfig.tsbuildinfo",
-        "node_modules/.cache/**"
+        "tsconfig.tsbuildinfo"
       ]
     },
     "lint": {
