--- a/packages/compat/package.json
+++ b/packages/compat/package.json
@@ -56,7 +56,7 @@
     "@types/node": "^16.13.0",
     "eslint": "^8.50.0",
     "prettier": "^3.0.3",
-    "rollup": "^4.0.2",
+    "rollup": "patch:rollup@npm%3A4.0.2#~/.yarn/patches/rollup-npm-4.0.2-c9dd2d43a6.patch",
     "typescript": "^5.2.2"
   },
   "engines": {
