--- a/packages/instrumentations/package.json
+++ b/packages/instrumentations/package.json
@@ -92,7 +92,7 @@
     "@types/semver": "^7.5.3",
     "eslint": "^8.50.0",
     "prettier": "^3.0.3",
-    "rollup": "^4.0.2",
+    "rollup": "patch:rollup@npm%3A4.0.2#~/.yarn/patches/rollup-npm-4.0.2-c9dd2d43a6.patch",
     "semver": "^7.5.4",
     "typescript": "^5.2.2"
   },
