--- a/examples/hello-manual/package.json
+++ b/examples/hello-manual/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@solarwinds-apm/example-hello-manual",
   "private": true,
+  "type": "module",
   "scripts": {
     "start": "node -r solarwinds-apm --loader solarwinds-apm/loader index.js"
   },
