--- a/packages/solarwinds-apm/package.json
+++ b/packages/solarwinds-apm/package.json
@@ -32,11 +32,11 @@
   "type": "module",
   "exports": {
     ".": {
-      "import": "./dist/es/index.js",
-      "require": "./dist/cjs/index.js"
+      "import": "./dist/es/es.js",
+      "require": "./dist/cjs/cjs.js"
     },
     "./loader": {
-      "import": "./dist/es/loader.js"
+      "import": "./dist/es/hooks.js"
     }
   },
   "main": "./dist/cjs/index.js",
@@ -66,6 +66,7 @@
     "@solarwinds-apm/instrumentations": "workspace:^",
     "@solarwinds-apm/module": "workspace:^",
     "@solarwinds-apm/sdk": "workspace:^",
+    "semver": "^7.5.4",
     "zod": "^3.22.4"
   },
   "peerDependencies": {
@@ -91,14 +92,15 @@
     "@solarwinds-apm/eslint-config": "workspace:^",
     "@solarwinds-apm/rollup-config": "workspace:^",
     "@solarwinds-apm/test": "workspace:^",
-    "@types/node": "^16.13.0",
+    "@types/node": "^20.8.0",
+    "@types/semver": "^7.5.3",
     "eslint": "^8.50.0",
     "prettier": "^3.0.3",
     "rollup": "patch:rollup@npm%3A4.0.2#~/.yarn/patches/rollup-npm-4.0.2-c9dd2d43a6.patch",
     "typescript": "^5.2.2"
   },
   "engines": {
-    "node": ">=16"
+    "node": ">=16.13.0"
   },
   "stableVersion": "13.0.0"
 }
