--- a/packages/solarwinds-apm/package.json
+++ b/packages/solarwinds-apm/package.json
@@ -32,11 +32,11 @@
   "type": "module",
   "exports": {
     ".": {
-      "import": "./dist/es/es.js",
-      "require": "./dist/cjs/cjs.js"
+      "import": "./dist/es/index.es.js",
+      "require": "./dist/cjs/index.cjs.js"
     },
     "./loader": {
-      "import": "./dist/es/hooks.js"
+      "import": "./dist/es/hooks.es.js"
     }
   },
   "main": "./dist/cjs/index.js",
