--- a/packages/solarwinds-apm/package.json
+++ b/packages/solarwinds-apm/package.json
@@ -39,7 +39,7 @@
       "import": "./dist/es/hooks.es.js"
     }
   },
-  "main": "./dist/cjs/index.js",
+  "main": "./dist/cjs/index.cjs.js",
   "files": [
     "./src/",
     "./dist/",
