--- a/examples/express-mysql/package.json
+++ b/examples/express-mysql/package.json
@@ -1,9 +1,8 @@
 {
   "name": "@solarwinds-apm/example-express-mysql",
   "private": true,
-  "type": "module",
   "scripts": {
-    "start": "node -r solarwinds-apm --loader solarwinds-apm/loader index.js"
+    "start": "node --loader solarwinds-apm/loader index.js"
   },
   "dependencies": {
     "@opentelemetry/api": "^1.3.0",
