--- a/turbo.json
+++ b/turbo.json
@@ -32,7 +32,7 @@
     "test": {
       "dependsOn": ["@solarwinds-apm/test#build", "build"],
       "inputs": ["package.json", "tsconfig.json", "src/**", "test/**"],
-      "env": ["TEST_*"],
+      "env": ["TEST_*", "SW_APM_*", "OTEL_*"],
       "outputs": []
     }
   },
