--- a/packages/instrumentations/package.json
+++ b/packages/instrumentations/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@solarwinds-apm/instrumentations",
-  "version": "0.0.0",
+  "version": "1.0.0-pre.1",
   "license": "Apache-2.0",
   "contributors": [
     "Raphaël Thériault <raphael.theriault@solarwinds.com>"
@@ -97,5 +97,6 @@
   },
   "engines": {
     "node": ">=16.13.0"
-  }
+  },
+  "stableVersion": "0.0.0"
 }
