--- a/packages/rollup-config/package.json
+++ b/packages/rollup-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@solarwinds-apm/rollup-config",
-  "version": "0.0.0",
+  "version": "1.0.0-pre.1",
   "license": "Apache-2.0",
   "contributors": [
     "Raphaël Thériault <raphael.theriault@solarwinds.com>"
@@ -52,5 +52,6 @@
     "@solarwinds-apm/eslint-config": "workspace:^",
     "eslint": "^8.50.0",
     "prettier": "^3.0.3"
-  }
+  },
+  "stableVersion": "0.0.0"
 }
