--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -104,12 +104,10 @@ jobs:
           action: launch
           github-token: ${{ steps.github-token.outputs.token }}
           matrix: |
-            16-alpine3.16
             16-amazonlinux2023
             16-debian10
             16-ubi8
             16-ubuntu20.04
-            18-alpine
             18-amazonlinux
             18-debian
             18-ubi
@@ -154,6 +152,12 @@ jobs:
         arch:
           - x64
           - arm64
+        # https://github.com/actions/runner/issues/801
+        exclude:
+          - image: 16-alpine3.16
+            arch: arm64
+          - image: 18-alpine
+            arch: arm64
       fail-fast: false
     container:
       image: ghcr.io/${{ github.repository }}/dev:${{ matrix.image }}
@@ -164,6 +168,7 @@ jobs:
       YARN_IGNORE_NODE: 1
 
     steps:
+      # https://github.com/actions/runner/issues/801
       - if: matrix.arch == 'arm64' && contains(matrix.image, 'alpine')
         run: sed -i "s/ID=alpine/ID=armpine/" /etc/os-release
 
