--- a/packages/instrumentations/package.json
+++ b/packages/instrumentations/package.json
@@ -29,7 +29,7 @@
     "provenance": true
   },
   "scripts": {
-    "build": "rollup -c && node ./dist/es/compatibility.js",
+    "build": "rollup -c --forceExit && node ./dist/es/compatibility.js",
     "lint": "prettier --check . && eslint . --max-warnings=0",
     "lint:fix": "eslint --fix . && prettier --write .",
     "publish": "node ../../scripts/publish.js"
@@ -91,7 +91,7 @@
     "@types/semver": "^7.5.3",
     "eslint": "^8.50.0",
     "prettier": "^3.0.3",
-    "rollup": "patch:rollup@npm%3A4.0.2#~/.yarn/patches/rollup-npm-4.0.2-c9dd2d43a6.patch",
+    "rollup": "^4.3.0",
     "semver": "^7.5.4",
     "typescript": "^5.2.2"
   },
