--- a/packages/solarwinds-apm/package.json
+++ b/packages/solarwinds-apm/package.json
@@ -49,7 +49,7 @@
     "provenance": true
   },
   "scripts": {
-    "build": "rollup -c",
+    "build": "rollup -c --forceExit",
     "lint": "prettier --check . && eslint . --max-warnings=0",
     "lint:fix": "eslint --fix . && prettier --write .",
     "publish": "node ../../scripts/publish.js",
@@ -96,7 +96,7 @@
     "@types/semver": "^7.5.3",
     "eslint": "^8.50.0",
     "prettier": "^3.0.3",
-    "rollup": "patch:rollup@npm%3A4.0.2#~/.yarn/patches/rollup-npm-4.0.2-c9dd2d43a6.patch",
+    "rollup": "^4.3.0",
     "typescript": "^5.2.2"
   },
   "engines": {
