--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -15,7 +15,8 @@
   },
   "type": "commonjs",
   "exports": {
-    ".": "./dist/index.js"
+    ".": "./dist/index.js",
+    "./otlp-exporter": "./dist/otlp-exporter.js"
   },
   "main": "./dist/index.js",
   "files": [
@@ -41,14 +42,19 @@
     "@solarwinds-apm/dependencies": "workspace:^",
     "@solarwinds-apm/histogram": "workspace:^",
     "@solarwinds-apm/lazy": "workspace:^",
+    "@solarwinds-apm/module": "workspace:^",
     "semver": "^7.5.4"
   },
   "peerDependencies": {
-    "@opentelemetry/api": "^1.3.0"
+    "@opentelemetry/api": "^1.3.0",
+    "@opentelemetry/exporter-trace-otlp-grpc": ">=0.34.0"
   },
   "peerDependenciesMeta": {
     "@opentelemetry/api": {
       "optional": false
+    },
+    "@opentelemetry/exporter-trace-otlp-grpc": {
+      "optional": true
     }
   },
   "devDependencies": {
