--- a/packages/solarwinds-apm/package.json
+++ b/packages/solarwinds-apm/package.json
@@ -60,10 +60,12 @@
     "@opentelemetry/instrumentation": "~0.45.1",
     "@opentelemetry/resources": "~1.18.1",
     "@opentelemetry/sdk-metrics": "~1.18.1",
+    "@opentelemetry/sdk-trace-base": "~1.18.1",
     "@opentelemetry/sdk-trace-node": "~1.18.1",
     "@opentelemetry/semantic-conventions": "~1.18.1",
     "@solarwinds-apm/bindings": "workspace:^",
     "@solarwinds-apm/instrumentations": "workspace:^",
+    "@solarwinds-apm/lazy": "workspace:^",
     "@solarwinds-apm/module": "workspace:^",
     "@solarwinds-apm/sdk": "workspace:^",
     "semver": "^7.5.4",
