fix various serverless issues

--- a/docker/otel-collector/config.yml
+++ b/docker/otel-collector/config.yml
@@ -13,6 +13,10 @@ exporters:
 
 service:
   pipelines:
+    traces:
+      receivers: [otlp]
+      processors: [batch]
+      exporters: [logging]
     metrics:
       receivers: [otlp]
       processors: [batch]
