--- a/examples/hello-manual/package.json
+++ b/examples/hello-manual/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "node --loader solarwinds-apm/loader index.js"
+    "start": "node --import solarwinds-apm index.js"
   },
   "dependencies": {
     "@opentelemetry/api": "^1.3.0",
