--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -16,7 +16,8 @@
   "type": "commonjs",
   "exports": {
     ".": "./dist/index.js",
-    "./otlp-exporter": "./dist/otlp-exporter.js"
+    "./otlp-exporter": "./dist/otlp-exporter.js",
+    "./otlp-metrics-exporter": "./dist/otlp-metrics-exporter.js"
   },
   "main": "./dist/index.js",
   "files": [
@@ -47,11 +48,15 @@
   },
   "peerDependencies": {
     "@opentelemetry/api": "^1.3.0",
+    "@opentelemetry/exporter-metrics-otlp-grpc": ">=0.34.0",
     "@opentelemetry/exporter-trace-otlp-grpc": ">=0.34.0"
   },
   "peerDependenciesMeta": {
     "@opentelemetry/api": {
       "optional": false
+    },
+    "@opentelemetry/exporter-metrics-otlp-grpc": {
+      "optional": true
     },
     "@opentelemetry/exporter-trace-otlp-grpc": {
       "optional": true
@@ -59,6 +64,8 @@
   },
   "devDependencies": {
     "@opentelemetry/api": "^1.3.0",
+    "@opentelemetry/exporter-metrics-otlp-grpc": "~0.45.1",
+    "@opentelemetry/exporter-trace-otlp-grpc": "~0.45.1",
     "@opentelemetry/instrumentation": "~0.45.1",
     "@opentelemetry/resources": "~1.18.1",
     "@opentelemetry/sdk-trace-node": "~1.18.1",
