--- a/packages/solarwinds-apm/package.json
+++ b/packages/solarwinds-apm/package.json
@@ -71,25 +71,15 @@
     "zod": "^3.22.4"
   },
   "peerDependencies": {
-    "@opentelemetry/api": "^1.3.0",
-    "@opentelemetry/exporter-metrics-otlp-grpc": ">=0.34.0",
-    "@opentelemetry/exporter-trace-otlp-grpc": ">=0.34.0"
+    "@opentelemetry/api": "^1.3.0"
   },
   "peerDependenciesMeta": {
     "@opentelemetry/api": {
       "optional": false
-    },
-    "@opentelemetry/exporter-metrics-otlp-grpc": {
-      "optional": true
-    },
-    "@opentelemetry/exporter-trace-otlp-grpc": {
-      "optional": true
     }
   },
   "devDependencies": {
     "@opentelemetry/api": "^1.3.0",
-    "@opentelemetry/exporter-metrics-otlp-grpc": "~0.45.1",
-    "@opentelemetry/exporter-trace-otlp-grpc": "~0.45.1",
     "@solarwinds-apm/eslint-config": "workspace:^",
     "@solarwinds-apm/rollup-config": "workspace:^",
     "@solarwinds-apm/test": "workspace:^",
