--- a/packages/compat/package.json
+++ b/packages/compat/package.json
@@ -47,6 +47,7 @@
     "@opentelemetry/api": "^1.3.0",
     "@opentelemetry/sdk-trace-base": "~1.18.1",
     "@opentelemetry/sdk-trace-node": "~1.18.1",
+    "@opentelemetry/semantic-conventions": "~1.18.1",
     "@solarwinds-apm/eslint-config": "workspace:^",
     "@solarwinds-apm/rollup-config": "workspace:^",
     "@solarwinds-apm/test": "workspace:^",
