--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -44,6 +44,7 @@
     "@solarwinds-apm/histogram": "workspace:^",
     "@solarwinds-apm/lazy": "workspace:^",
     "@solarwinds-apm/module": "workspace:^",
+    "json-stringify-safe": "^5.0.1",
     "semver": "^7.5.4"
   },
   "peerDependencies": {
@@ -71,6 +72,7 @@
     "@opentelemetry/sdk-trace-node": "~1.18.1",
     "@solarwinds-apm/eslint-config": "workspace:^",
     "@solarwinds-apm/test": "workspace:^",
+    "@types/json-stringify-safe": "^5.0.3",
     "@types/node": "^16.13.0",
     "@types/semver": "^7.5.3",
     "eslint": "^8.50.0",
