--- a/packages/module/package.json
+++ b/packages/module/package.json
@@ -18,6 +18,10 @@
     ".": {
       "import": "./dist/es/index.js",
       "require": "./dist/cjs/index.js"
+    },
+    "./load": {
+      "import": "./dist/es/load.es.js",
+      "require": "./dist/cjs/load.cjs.js"
     }
   },
   "main": "./dist/cjs/index.js",
