--- a/packages/lazy/tsconfig.json
+++ b/packages/lazy/tsconfig.json
@@ -3,7 +3,7 @@
   "include": ["./src"],
   "compilerOptions": {
     "rootDir": "./src",
-    "outDir": "./dist",
+    "outDir": "./dist"
   },
-  "references": [{ "path": ".." }],
+  "references": [{ "path": ".." }]
 }
