--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -31,18 +31,17 @@
   },
   "dependencies": {
     "@eslint/js": "^8.51.0",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@typescript-eslint/parser": "^6.7.4",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-header": "^3.1.1",
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "eslint-plugin-tsdoc": "^0.2.17",
-    "globals": "^14.0.0"
+    "globals": "^14.0.0",
+    "typescript-eslint": "^7.0.2"
   },
   "peerDependencies": {
-    "eslint": "^8.23.0",
-    "prettier": "*",
-    "typescript": "*"
+    "eslint": "^8.56.0",
+    "prettier": "^3.0.0",
+    "typescript": ">=4.7.4"
   },
   "peerDependenciesMeta": {
     "eslint": {
