--- a/packages/instrumentations/package.json
+++ b/packages/instrumentations/package.json
@@ -75,7 +75,8 @@
     "@opentelemetry/instrumentation-winston": "^0.34.0",
     "@opentelemetry/resource-detector-aws": "^1.3.1",
     "@opentelemetry/resource-detector-container": "^0.3.1",
-    "@opentelemetry/resources": "~1.21.0"
+    "@opentelemetry/resources": "~1.21.0",
+    "@solarwinds-apm/module": "workspace:^"
   },
   "peerDependencies": {
     "@opentelemetry/api": "^1.3.0"
