--- a/packages/instrumentations/package.json
+++ b/packages/instrumentations/package.json
@@ -74,6 +74,7 @@
     "@opentelemetry/instrumentation-tedious": "^0.7.0",
     "@opentelemetry/instrumentation-winston": "^0.34.0",
     "@opentelemetry/resource-detector-aws": "^1.3.1",
+    "@opentelemetry/resource-detector-azure": "^0.2.4",
     "@opentelemetry/resource-detector-container": "^0.3.1",
     "@opentelemetry/resources": "~1.21.0",
     "@solarwinds-apm/module": "workspace:^"
