--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -8,10 +8,10 @@ jobs:
   checks:
     runs-on: ubuntu-latest
     steps:
-      - run: sudo apt-get update && sudo apt-get install -y clang-format
       - uses: actions/checkout@v4
         with:
           lfs: true
+          submodules: true
       - uses: actions/setup-node@v4
         with:
           node-version: 20
@@ -64,6 +64,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           lfs: true
+          submodules: true
           fetch-depth: 0
       - uses: actions/setup-node@v4
         with:
@@ -174,6 +175,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           lfs: true
+          submodules: true
       - uses: actions/download-artifact@v4
         with:
           name: build
