avoid npm publish script issue

--- a/packages/bindings/npm/linux-x64-gnu/package.json
+++ b/packages/bindings/npm/linux-x64-gnu/package.json
@@ -8,7 +8,7 @@
     "directory": "packages/bindings/npm/linux-x64-gnu"
   },
   "scripts": {
-    "publish": "node ../../../../scripts/publish.js"
+    "release": "node ../../../../scripts/publish.js"
   },
   "os": [
     "linux"
