--- a/packages/bindings/package.json
+++ b/packages/bindings/package.json
@@ -34,7 +34,7 @@
     "build": "node build.js",
     "lint": "prettier --check . && eslint . --max-warnings=0 && clang-format src/*.hh src/*/* -n --Werror",
     "lint:fix": "eslint --fix . && prettier --write . && clang-format src/*.hh src/*/* -i --Werror",
-    "publish": "node ../../scripts/publish.js",
+    "release": "node ../../scripts/publish.js",
     "test": "swtest",
     "oboe": "node oboe.js"
   },
