--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lambda": "node scripts/lambda.js",
     "lint": "prettier --check *.json *.md .github && turbo run lint --continue",
     "lint:fix": "prettier --write *.json *.md .github && turbo run lint:fix --continue",
-    "publish": "turbo run build && turbo run publish",
+    "publish": "turbo run build && turbo run release",
     "test": "turbo run test --continue",
     "version:latest": "node scripts/version.js",
     "version:prerelease": "node scripts/version.js pre",
