--- a/packages/instrumentations/package.json
+++ b/packages/instrumentations/package.json
@@ -33,7 +33,7 @@
     "build": "rollup -c --forceExit && node ./dist/es/compatibility.es.js",
     "lint": "prettier --check . && eslint . --max-warnings=0",
     "lint:fix": "eslint --fix . && prettier --write .",
-    "publish": "node ../../scripts/publish.js"
+    "release": "node ../../scripts/publish.js"
   },
   "dependencies": {
     "@opentelemetry/instrumentation": "~0.49.1",
