--- a/packages/rollup-config/package.json
+++ b/packages/rollup-config/package.json
@@ -28,7 +28,7 @@
   "scripts": {
     "lint": "prettier --check . && eslint . --max-warnings=0",
     "lint:fix": "eslint --fix . && prettier --write .",
-    "publish": "node ../../scripts/publish.js"
+    "release": "node ../../scripts/publish.js"
   },
   "dependencies": {
     "@rollup/plugin-json": "^6.0.1",
