npm provenance is overwriting our tarball which is bad

--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -7,7 +7,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/solarwinds/apm-js.git",
+    "url": "git+https://github.com/solarwinds/apm-js.git",
     "directory": "packages/eslint-config"
   },
   "bugs": {
