--- a/packages/solarwinds-apm/package.json
+++ b/packages/solarwinds-apm/package.json
@@ -8,7 +8,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/solarwinds/apm-js.git",
+    "url": "git+https://github.com/solarwinds/apm-js.git",
     "directory": "packages/solarwinds-apm"
   },
   "bugs": {
